--- a/index.html
+++ b/index.html
@@ -7,23 +7,43 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        h1 {
+            text-align: center;
+            margin: 20px 0;
+        }
+        #highlightsContainer {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
         }
         .highlight {
             border: 1px solid #ccc;
-            margin: 10px;
-            padding: 15px;
+            border-radius: 8px;
+            overflow: hidden;
             display: flex;
             flex-direction: column;
             align-items: center;
             text-align: center;
+            background-color: #f9f9f9;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .highlight img {
-            max-width: 100%;
+            width: 100%;
             height: auto;
+        }
+        .highlight h2 {
+            margin: 10px 0;
+            font-size: 18px;
+            color: #333;
         }
         iframe {
             width: 100%;
-            height: 315px;
+            height: 200px;
         }
     </style>
 </head>
@@ -46,11 +66,8 @@
                 const div = document.createElement('div');
                 div.className = 'highlight';
                 div.innerHTML = `
-                    <h2>${highlight.matchTitle}</h2>
-                    <p>League: ${highlight.league}</p>
-                    <p>Sport: ${highlight.sport}</p>
                     <img src="${highlight.image}" alt="${highlight.matchTitle}">
-                    <iframe src="${highlight.video}" frameborder="0" allowfullscreen></iframe>
+                    <h2>${highlight.matchTitle}</h2>
                 `;
                 container.appendChild(div);
             });
