--- a/index.html
+++ b/index.html
@@ -52,26 +52,78 @@
     <div id="highlightsContainer"></div>
 
     <script>
-        // Fetch highlights from the JSON file
-        fetch('highlights.json')
-            .then(response => response.json())
-            .then(data => {
-                displayHighlights(data.highlights);
-            })
-            .catch(error => console.error('Error loading JSON:', error));
+// Function to convert video URLs into embeddable formats
+function getEmbedUrl(url) {
+    try {
+        const urlObj = new URL(url);
 
-        function displayHighlights(highlights) {
-            const container = document.getElementById('highlightsContainer');
-            highlights.forEach(highlight => {
-                const div = document.createElement('div');
-                div.className = 'highlight';
-                div.innerHTML = `
-                    <img src="${highlight.image}" alt="${highlight.matchTitle}">
-                    <h2>${highlight.matchTitle}</h2>
-                `;
-                container.appendChild(div);
-            });
+        // Handle YouTube
+        if (urlObj.hostname.includes('youtube.com') || urlObj.hostname.includes('youtu.be')) {
+            const videoId = urlObj.searchParams.get('v') || urlObj.pathname.split('/')[1];
+            return `https://www.youtube.com/embed/${videoId}`;
         }
+
+        // Handle Vimeo
+        if (urlObj.hostname.includes('vimeo.com')) {
+            const videoId = urlObj.pathname.split('/')[1];
+            return `https://player.vimeo.com/video/${videoId}`;
+        }
+
+        // Handle Dailymotion
+        if (urlObj.hostname.includes('dailymotion.com')) {
+            const videoId = urlObj.pathname.split('/')[2];
+            return `https://www.dailymotion.com/embed/video/${videoId}`;
+        }
+
+        // Handle Custom Player URLs (e.g., yosintv2.github.io player)
+        if (urlObj.hostname.includes('yosintv2.github.io') && urlObj.pathname.includes('plyrr.html')) {
+            return url; // Use the custom player URL as-is
+        }
+
+        // Default case: Use the URL as-is if it's already embeddable
+        return url;
+    } catch (error) {
+        console.error('Invalid video URL:', url);
+        return '';
+    }
+}
+
+// Function to display highlights dynamically on the page
+function displayHighlights(highlights) {
+    const container = document.getElementById('highlightsContainer');
+    highlights.forEach(highlight => {
+        const embedUrl = getEmbedUrl(highlight.video); // Convert video URL to embeddable URL
+        if (embedUrl) {
+            const div = document.createElement('div');
+            div.className = 'highlight';
+            div.innerHTML = `
+                <img src="${highlight.image}" alt="${highlight.matchTitle}">
+                <h2>${highlight.matchTitle}</h2>
+                <iframe src="${embedUrl}" frameborder="0" allowfullscreen></iframe>
+            `;
+            container.appendChild(div);
+        } else {
+            console.warn('Skipping highlight with invalid video URL:', highlight);
+        }
+    });
+}
+
+// Function to fetch and display JSON data
+function loadHighlights(jsonPath) {
+    fetch(jsonPath)
+        .then(response => response.json())
+        .then(data => {
+            displayHighlights(data.highlights);
+        })
+        .catch(error => console.error('Error loading JSON:', error));
+}
+
+// Initialize the highlights by providing the JSON file path
+document.addEventListener('DOMContentLoaded', () => {
+    loadHighlights('highlights.json'); // Update the path if the JSON file is in another location
+});
     </script>
+
+    
 </body>
 </html>
