--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Match Highlights with Ads</title>
+    <title>Match Highlights</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,15 +16,10 @@
             margin: 20px 0;
         }
         #highlightsContainer {
-            display: flex;
-            flex-direction: column;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
             padding: 20px;
-        }
-        .row {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
         }
         .highlight {
             border: 1px solid #ccc;
@@ -37,11 +32,13 @@
         .highlight img {
             width: 100%;
             height: auto;
+            cursor: pointer;
         }
         .highlight h2 {
             margin: 10px 0;
             font-size: 18px;
             color: #333;
+            cursor: pointer;
         }
         .highlight a {
             text-decoration: none;
@@ -49,10 +46,6 @@
         }
         .highlight a:hover h2 {
             color: #007bff;
-        }
-        .ad {
-            text-align: center;
-            margin: 20px 0;
         }
     </style>
 </head>
@@ -62,8 +55,5 @@
 
     <!-- Link to JavaScript file -->
     <script src="highlights.js"></script>
-
-    <!-- Google Ads Script -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
