--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Match Highlights</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,12 +17,6 @@
         h1 {
             text-align: center;
             margin: 20px 0;
-        }
-        #highlightsContainer {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
         }
         .highlight {
             border: 1px solid #ccc;
@@ -51,9 +48,18 @@
 </head>
 <body>
     <h1>Match Highlights</h1>
-    <div id="highlightsContainer"></div>
+    <div class="container">
+        <div id="highlightsContainer" class="row">
+            <!-- Dynamic content will be inserted here -->
+        </div>
+    </div>
 
     <!-- Link to JavaScript file -->
     <script src="highlights.js"></script>
+
+    <!-- Bootstrap JS and Popper.js (for functionality of some Bootstrap components) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
