--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
             text-align: center;
             margin: 20px 0;
         }
+        #highlightsContainer {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
         .highlight {
             border: 1px solid #ccc;
             border-radius: 8px;
