--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             margin: 20px 0;
         }
         #highlightsContainer {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            display: flex;
+            flex-wrap: wrap;
             gap: 20px;
             padding: 20px;
+            justify-content: space-between;
         }
         .highlight {
             border: 1px solid #ccc;
@@ -31,6 +32,8 @@
             text-align: center;
             background-color: #f9f9f9;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: calc(33.333% - 20px);  /* 3 videos per row */
+            margin-bottom: 20px;
         }
         .highlight img {
             width: 100%;
@@ -49,6 +52,18 @@
         }
         .highlight a:hover h2 {
             color: #007bff;
+        }
+
+        /* Adjustments for smaller screens */
+        @media (max-width: 768px) {
+            .highlight {
+                width: calc(50% - 20px);  /* 2 videos per row on medium screens */
+            }
+        }
+        @media (max-width: 480px) {
+            .highlight {
+                width: 100%;  /* 1 video per row on small screens */
+            }
         }
     </style>
 </head>
