--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@ h1 {
     </style>
 </head>
 <body>
-  <h1>Match Highlights</h1>
-    <div id="highlightsContainer"></div> <!-- Container for videos -->
+    <h1>Match Highlights</h1>
+    <div class="container">
+        <div id="highlightsContainer" class="row">
+            <!-- Dynamic content will be inserted here -->
+        </div>
+    </div>
 
     <!-- Link to JavaScript file -->
     <script src="highlights.js"></script>
