--- a/index.html
+++ b/index.html
@@ -8,74 +8,48 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-h1 {
-    text-align: center;
-    margin: 20px 0;
-}
-
-#highlightsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px; /* Controls horizontal spacing between items */
-    padding: 20px;
-    justify-content: space-between;
-}
-
-.highlight {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    overflow: hidden;
-    text-align: center;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: calc(33.333% - 20px);  /* 3 videos per row */
-    margin-bottom: 10px;  /* Reduced vertical space between items in a column */
-}
-
-.highlight img {
-    width: 100%;
-    height: auto;
-    cursor: pointer;
-}
-
-.highlight h2 {
-    margin: 10px 0;
-    font-size: 18px;
-    color: #333;
-    cursor: pointer;
-}
-
-.highlight a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.highlight a:hover h2 {
-    color: #007bff;
-}
-
-/* Adjustments for smaller screens */
-@media (max-width: 768px) {
-    .highlight {
-        width: calc(50% - 20px);  /* 2 videos per row on medium screens */
-        margin-bottom: 10px;  /* Reduced vertical space for tablets */
-    }
-}
-
-@media (max-width: 480px) {
-    .highlight {
-        width: 100%;  /* 1 video per row on small screens */
-        margin-bottom: 10px;  /* Reduced vertical space for mobile */
-    }
-}
-
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        h1 {
+            text-align: center;
+            margin: 20px 0;
+        }
+        #highlightsContainer {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+        .highlight {
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            overflow: hidden;
+            text-align: center;
+            background-color: #f9f9f9;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .highlight img {
+            width: 100%;
+            height: auto;
+            cursor: pointer;
+        }
+        .highlight h2 {
+            margin: 10px 0;
+            font-size: 18px;
+            color: #333;
+            cursor: pointer;
+        }
+        .highlight a {
+            text-decoration: none;
+            color: inherit;
+        }
+        .highlight a:hover h2 {
+            color: #007bff;
+        }
     </style>
 </head>
 <body>
