--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
+        /* General Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
+
         h1 {
             text-align: center;
             margin: 20px 0;
         }
-        #highlightsContainer {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
+
+        .container {
+            max-width: 1200px; /* Limit container width */
+            margin: auto;
+            padding: 0 15px; /* Add some padding for smaller screens */
         }
+
+        .row > .col-md-4 {
+            padding: 10px; /* Space between columns */
+        }
+
+        /* Highlight Card Styles */
         .highlight {
             border: 1px solid #ccc;
             border-radius: 8px;
@@ -31,24 +39,48 @@
             text-align: center;
             background-color: #f9f9f9;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px; /* Space between rows */
         }
+
         .highlight img {
             width: 100%;
             height: auto;
             cursor: pointer;
         }
+
         .highlight h2 {
             margin: 10px 0;
             font-size: 18px;
             color: #333;
             cursor: pointer;
         }
+
         .highlight a {
             text-decoration: none;
             color: inherit;
         }
+
         .highlight a:hover h2 {
-            color: #007bff;
+            color: #007bff; /* Change color on hover */
+        }
+
+        /* Responsive adjustments */
+        @media (min-width: 992px) {
+            .highlight {
+                margin-bottom: 25px; /* Slightly larger spacing on bigger screens */
+            }
+        }
+
+        @media (max-width: 768px) {
+            .row > .col-md-4 {
+                padding: 5px; /* Reduce spacing for smaller screens */
+            }
+        }
+
+        @media (max-width: 480px) {
+            .highlight h2 {
+                font-size: 16px; /* Smaller font size for titles on very small screens */
+            }
         }
     </style>
 </head>
